# Gimmel-discord-bot

./: .gitignore  README.md
Gimmel-bot/: .env.example  README.md  pyproject.toml  setup.py
Gimmel-bot/docker/: Dockerfile
Gimmel-bot/src/absence_bot/: __init__.py  commands.py  config.py  discord_bot.py  http_server.py  logging_utils.py  main.py  models.py  reporting.py  scheduler.py  templates.py  time_utils.py  voice_logic.py
Gimmel-bot/src/absence_bot/storage/: __init__.py  base.py  postgres.py  schema.sql  sqlite.py
Gimmel-bot/tests/integration/: test_reporting_integration.py
Gimmel-bot/tests/storage/: test_sqlite_storage.py
Gimmel-bot/tests/unit/: test_templates.py  test_time_utils.py  test_voice_handler.py  test_voice_logic.py
